--- a/style.css
+++ b/style.css
@@ -3,68 +3,53 @@
 	margin: 0;
 }
 h1	{
+	font: bold 200% sans-serif;
 	text-align: center;
 	background-color: black;
 	color: white;
 	padding: 20px;
 }
 nav ul {
+	font: 200% sans-serif;
 	background-color: #ff681c;
 	width: 100%;
-	list-style-type: none;
+	height: 200%;
 	text-align: center;
-}
+	}
 nav li {
-	display: inline-flex;
+	display: inline;
 }
 nav a {
 	text-decoration: none;
 	color: black;
 	padding: 10px;
-	width: 150;
-}
-nav li:hover {
-	background-color: white;
+	width: 150px;
 }
 img {
-	width: 200px;
-	height: 200px;
-	border-radius: 50%;
-	object-fit: cover;
+	width: 596px;
+	height: 538px;
+	display: flex;
+	margin-top: 10px;
 }
 .contenido {
+	text-align: center;
+	margin: auto;
 	display: flex;
-	margin: 60px;
 }
 .Articulo {
-	width: 80%;
-	border-right: 3px;
-	border-right-color: black;
-	border-right-style: solid;
-}
-.Secciones {
-	display: flex;
-	align-items: center;
-	padding: 40px;
-}
-.Menu-Secundario {
-	width: 20%;
-	margin-top: 60px;
-}
-.Menu-Secundario a {
-	display: block;
 	text-align: center;
-	color: black;
-	margin-bottom: 20px;
+	margin: auto;
+	display: flex;
 }
 footer {
 	width: 100%;
-	height: 200%;
+	height: 100%;
 	background-color: black;
 	color: white;
-	margin-top: 40px;
+	margin-top: 20px;
+	font: bold 150% sans-serif
 }
 footer p {
 	text-align: center;
-	padding: 50px;
+	padding: 12px;
 }
