--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
 	border: solid 2px black;
 }
 
-@media screen and (max-width: 2000px){
+@media screen and (min-width: 900px){
 
 	/* CONFIGURACION TITULO Y SUB TITULO */
 
